--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,21 @@
-Flask==1.1.2
-Flask-PyMongo==2.3.0
-Jinja2==2.11.2
-mypy-extensions==0.4.3
-PyYAML==5.4.1
-regex==2020.11.13
-requests==2.25.0
 selenium==3.141.0
-splinter==0.14.0
+numpy==1.20.0
 beautifulsoup4==4.7.1
+bs4==0.0.1
+decorator==4.4.0
+Django==2.1.7
+Flask==1.0.2
+Flask-PyMongo==2.2.0
 Flask-SQLAlchemy==2.3.2
 gunicorn==19.9.0
-pandas==0.24.1
+pandas==1.2.1
 plotly==3.7.1
-psycopg2==2.7.7
+psycopg2==2.8.6
+psycopg2-binary==2.8.6
+pymongo==3.7.2
+requests==2.21.0
 requests-oauthlib==1.2.0
-scipy==1.2.1
+scipy==1.6.0
+splinter==0.10.0
 SQLAlchemy==1.2.18
+
