--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
-beautifulsoup4==4.7.1
-bs4==0.0.1
-decorator==4.4.0
-Django==2.1.7
-Flask==1.0.2
-Flask-PyMongo==2.2.0
-Flask-SQLAlchemy==2.3.2
+Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
+Flask-PyMongo==2.3.0
+Jinja2==2.11.2
+pymongo==3.11.2
+regex==2020.11.13
+requests==2.25.0
+splinter==0.14.0
 gunicorn==19.9.0
-plotly==3.7.1
-requests==2.21.0
-requests-oauthlib==1.2.0
-splinter==0.10.0
 SQLAlchemy==1.2.18
